[build-system]
requires = ["setuptools", "wheel"]

[tool.poetry]
name = "autoblast"
version = "0.0.0"
# description = "Your project description."
# authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3"
openpyxl = "^3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

