[tool.poetry]
name = "autoblast"
version = "0.0.0"
authors = ["Jaime R Calzada <jrcalzada@vims.edu>", "Paul Clerkin"]
description = "Wrapper around blastn binary to make multiple queries from a spreadsheet"
packages = [
  { include = "autoblast" },
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3"
openpyxl = "^3.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning", "toml"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.scripts]
autoblast = "autoblast.__main__:main"
